feat: translate all

--- a/src/views/pages/home.html
+++ b/src/views/pages/home.html
@@ -70,8 +70,8 @@
             <img class="second-slide" src="../../views/styles/images/companyPictures/Colaboradores-CESAR-1.jpg" alt="Second slide">
             <div class="container">
               <div class="carousel-caption">
-                <h1>Another example headline.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <h1>Innovation and Technology</h1>
+                <p>Our company harnesses the power of cutting-edge technology to deliver innovative solutions. By continuously investing in research and development, we stay ahead of the curve, providing services that empower businesses to thrive in the modern world.</p>
                 <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
               </div>
             </div>
@@ -81,8 +81,8 @@
             <img class="third-slide" src="../../views/styles/images/companyPictures/recife.jpeg" alt="First slide">
             <div class="container">
               <div class="carousel-caption text-left">
-                <h1>Example headline.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <h1>Team and Culture</h1>
+                <p>Driven by a passionate team and a culture of excellence, we foster an environment that encourages collaboration, creativity, and continuous improvement. Our diverse talents work together to tackle the toughest challenges and bring our clients' visions to life.</p>
                 <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
               </div>
             </div>
@@ -92,8 +92,8 @@
             <img class="fourth-slide" src="../../views/styles/images/companyPictures/companypeople.jpg" alt="Second slide">
             <div class="container">
               <div class="carousel-caption">
-                <h1>Another example headline.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <h1>Quality Services</h1>
+                <p>We pride ourselves on delivering quality services that meet the unique needs of our clients. From User Support to IT Infrastructure, our comprehensive suite of solutions is tailored to help businesses achieve their goals efficiently and securely.</p>
                 <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
               </div>
             </div>
@@ -123,8 +123,8 @@
 
         <div class="row featurette">
           <div class="col-md-7">
-              <h2 class="featurette-heading">Saiba como é trabalhar conosco</h2>
-              <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+              <h2 class="featurette-heading">Foundation and Growth</h2>
+              <p class="lead">Founded in 2008, our company began with a vision to provide innovative and high-quality solutions to customers in the Information Technology sector. Starting as a small team of passionate professionals, we have grown into a leading provider of services including User Support, IT Infrastructure, Data Security, System Installation, and IT Outsourcing. Our journey has been marked by a commitment to excellence, continuous innovation, and a customer-centric approach.</p>
           </div>
           <div class="col-md-5" style="justify-content: center;">
               <div class="embed-responsive embed-responsive-16by9">
@@ -138,8 +138,8 @@
 
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading"><span class="text-muted">Expansion</span> of Expertise</h2>
+            <p class="lead">Over the years, we've expanded our expertise to cover these services comprehensively. By staying at the forefront of technological advancements, we have established a reputation for delivering solutions that meet the evolving needs of our clients.</p>
           </div>
           <div class="col-md-5 order-md-1">
             <div class="embed-responsive embed-responsive-16by9">
@@ -152,8 +152,8 @@
 
         <div class="row featurette">
           <div class="col-md-7">
-            <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading">Continued <span class="text-muted">Commitment</span></h2>
+            <p class="lead">Today, with a global network of partners and customers, we remain dedicated to creating value through cutting-edge solutions, unmatched customer support, and a relentless drive to exceed expectations. Our success is built on a foundation of strong values, a talented team, and a deep understanding of the challenges and opportunities in the modern business landscape.</p>
           </div>
           <div class="col-md-5">
             <div class="embed-responsive embed-responsive-16by9">
@@ -170,21 +170,21 @@
             <img class="rounded-circle" src="../../views/styles/images/founders/luana.png" alt="Generic placeholder image" width="140" height="140">
             <h2>Luana Dantas</h2>
             <h4>CEO</h4>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+            <p>As CEO, Luana Dantas brings visionary leadership to the company. With a keen understanding of market trends and customer needs, she guides the organization towards sustainable growth and innovation, ensuring that our solutions remain relevant and impactful.</p>
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img class="rounded-circle" src="../../views/styles/images/founders/marco.png" alt="Generic placeholder image" width="140" height="140">
             <h2>Marcoantonio Manso</h2>
             <h4>CTO</h4>
-            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+            <p>In his role as CTO, Marcoantonio Manso oversees the company's technology strategy. His extensive experience in software development and infrastructure management enables him to steer the technical team towards delivering robust and scalable solutions that meet our clients' complex requirements.</p>
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img class="rounded-circle" src="../../views/styles/images/founders/joao-gomes.jpeg" alt="Generic placeholder image" width="140" height="140">
             <h2>João Guilherme Gomes Furtado</h2>
             <h4>COO</h4>
-            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+            <p>João Guilherme, as COO, excels in operational efficiency. He coordinates cross-departmental efforts to streamline workflows, enhance productivity, and implement best practices that align with the company's strategic goals, ensuring seamless service delivery.</p>
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
@@ -205,19 +205,19 @@
               <th scope="row">1</th>
               <td>CEO</td>
               <td>Luana</td>
-              <td>Experiencia em ...</td>
+              <td>has over 15 years of experience leading organizations in growth and innovation strategies.</td>
             </tr>
             <tr>
               <th scope="row">2</th>
               <td>CTO</td>
               <td>Marcoantonio</td>
-              <td>Experiencia em ...</td>
+              <td>has 20 years of experience developing software systems and managing technical infrastructure.</td>
             </tr>
             <tr>
               <th scope="row">3</th>
               <td>COO</td>
               <td>João</td>
-              <td>Experiencia em ...</td>
+              <td>has 12 years of experience optimizing processes and aligning operational strategies.</td>
             </tr>
           </tbody>
         </table>
@@ -232,11 +232,9 @@
               <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"/></svg>
             </div>
             <div>
-              <h2>Suporte ao Usuário</h2>
-              <p>Pode ser feito localmente ou por um time remoto e terá como foco resolver problemas rapidamente.</p>
-              <a href="#" class="btn btn-primary">
-                Primary button
-              </a>
+              <h2>User support</h2>
+              <p>Provides comprehensive assistance to users, including troubleshooting technical issues, answering questions, and offering guidance to ensure a seamless user experience.</p>
+
             </div>
           </div>
           <div class="col d-flex align-items-start">
@@ -244,11 +242,8 @@
               <svg class="bi" width="1em" height="1em"><use xlink:href="#cpu-fill"/></svg>
             </div>
             <div>
-              <h2>outsourcing de equipamentos de TI</h2>
-              <p>A empresa faz o aluguel temporário de um conjunto de equipamentos, como computadores, notebooks, tablets, celulares e até mesmo roteadores, para atender a demandas internas.</p>
-              <a href="#" class="btn btn-primary">
-                Primary button
-              </a>
+              <h2>It Infrastructure</h2>
+              <p>Involves managing and maintaining the organization's IT infrastructure, including servers, networks, and data storage, to ensure optimal performance, security, and scalability.</p>
             </div>
           </div>
           <div class="col d-flex align-items-start">
@@ -256,11 +251,8 @@
               <svg class="bi" width="1em" height="1em"><use xlink:href="#tools"/></svg>
             </div>
             <div>
-              <h2>gestão de infraestrutura de TI</h2>
-              <p>Uma equipe é contratada para gerenciar todo o parque tecnológico do negócio.</p>
-              <a href="#" class="btn btn-primary">
-                Primary button
-              </a>
+              <h2>Data Security</h2>
+              <p>Focuses on protecting sensitive data from unauthorized access, breaches, and loss through the implementation of security policies, encryption, and regular risk assessments.</p>
             </div>
           </div>
         </div>
@@ -270,11 +262,8 @@
               <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"/></svg>
             </div>
             <div>
-              <h2>Suporte ao Usuário</h2>
-              <p>Pode ser feito localmente ou por um time remoto e terá como foco resolver problemas rapidamente.</p>
-              <a href="#" class="btn btn-primary">
-                Primary button
-              </a>
+              <h2>System Instalation</h2>
+              <p>Handles the setup and configuration of software and hardware systems, ensuring that all components work seamlessly together for optimal functionality and performance.</p>
             </div>
           </div>
           <div class="col d-flex align-items-start">
@@ -282,23 +271,8 @@
               <svg class="bi" width="1em" height="1em"><use xlink:href="#cpu-fill"/></svg>
             </div>
             <div>
-              <h2>outsourcing de equipamentos de TI</h2>
-              <p>A empresa faz o aluguel temporário de um conjunto de equipamentos, como computadores, notebooks, tablets, celulares e até mesmo roteadores, para atender a demandas internas.</p>
-              <a href="#" class="btn btn-primary">
-                Primary button
-              </a>
-            </div>
-          </div>
-          <div class="col d-flex align-items-start">
-            <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-              <svg class="bi" width="1em" height="1em"><use xlink:href="#tools"/></svg>
-            </div>
-            <div>
-              <h2>gestão de infraestrutura de TI</h2>
-              <p>Uma equipe é contratada para gerenciar todo o parque tecnológico do negócio.</p>
-              <a href="#" class="btn btn-primary">
-                Primary button
-              </a>
+              <h2>It Outsourcing</h2>
+              <p>Provides external IT services to businesses, covering a range of needs from technical support to infrastructure management, allowing companies to focus on their core competencies.</p>
             </div>
           </div>
         </div>
