--- a/src/views/pages/itSupport.html
+++ b/src/views/pages/itSupport.html
@@ -8,8 +8,6 @@
     <link rel="icon" href="../../views/styles/images/markus/logo.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>It Support</title>
-    <!-- Bootstrap core CSS -->
-    <!-- Custom styles for this template -->
     <link href="../styles/css/form-validation.css" rel="stylesheet">
     <link href="../styles/css/home.css" rel="stylesheet">
   </head>
@@ -54,7 +52,7 @@
         <span class="text-muted">Your support requests</span>
         <span class="badge badge-secondary badge-pill ml-3">3</span>
       </h4>
-      <table class="table table-striped table-dark mb-4" style="border-radius: 8px;">
+      <table id="serviceRequests" class="table table-striped table-dark mb-4" style="border-radius: 8px;">
         <thead>
           <tr>
             <th scope="col">ID</th>
@@ -67,72 +65,36 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>02/02/2020</td>
-            <td>User Support</td>
-            <td>Done</td>
-            <td>250.00</td>
-            <td>05/02/2020</td>
-            <td id="deleterow1" onclick="name()"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-x-circle" viewBox="0 0 16 16">
-              <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
-              <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
-            </svg></td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>04/07/2022</td>
-            <td>Data Security</td>
-            <td>Done</td>
-            <td>570.00</td>
-            <td>07/09/2022</td>
-            <td id="deleterow2" style="justify-content: center;" onclick="name()"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-x-circle" viewBox="0 0 16 16">
-              <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
-              <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
-            </svg></td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>08/09/2022</td>
-            <td>IT Infra</td>
-            <td>Pending</td>
-            <td>1020.00</td>
-            <td>05/05/2023</td>
-            <td id="deleterow3" onclick="deleteRow(this)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-x-circle" viewBox="0 0 16 16">
-              <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
-              <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
-            </svg></td>
-          </tr>
         </tbody>
       </table>
       <div class="row">
         
         <div class="col-md-6 order-md-2">
           <h4 class="mb-3">New IT Support Request</h4>
-          <form class="needs-validation" onsubmit="event.preventDefault(); addServiceRequest()" novalidate>
+          <form class="needs-validation" onsubmit="event.preventDefault(); addServiceRequest();" novalidate>
             <hr class="mb-4">
             <div class="d-block my-3">
               <div class="form-row">
                 <div class="form-group col-md-6 mr-3">
                   <label for="inputService">Service Type</label>
-                  <select id="inputService" class="form-control inputcolor " onchange="updateServicePrice()">
+                  <select id="inputService" class="form-control inputcolor " onchange="updateServicePrice();">
                     <option></option>
                     <option value="1">User support</option>
                     <option value="2">It Infrastructure</option>
                     <option value="3">Data Security</option>
-                    <option value="4">Sistem Imstalation</option>
+                    <option value="4">System Instalation</option>
                     <option value="5">It Outsourcing</option>
                   </select>
                 </div>
                 <div class="form-group col-md-4">
                   <label for="serviceStatus">Status:</label>
-                  <p>In preparation</p>
+                  <p id="serviceStatus"></p>
                 </div>
               </div>
               <div class="form-row">
                 <div class="form-group col-md-4 mr-3">
                   <label for="attendanceDeadline">Attendance Deadline:</label>
-                  <p></p>
+                  <p id="estimatedDate"></p>
                 </div>
                 <div class="form-group col-md-4">
                   <label for="servicePrice">Price:</label>
