--- a/src/views/pages/home.html
+++ b/src/views/pages/home.html
@@ -32,13 +32,10 @@
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="itSupport.html">Contact IT</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="logIn.html">Log In</a>
             </li>
             <li class="nav-item">
-              <a class="btn btn-primary" href="joinUs.html">Join Us</a>
+              <a class="nav-link" href="joinUs.html">Join Us</a>
             </li>
           </ul>
         </div>
