--- a/src/views/pages/joinUs.html
+++ b/src/views/pages/joinUs.html
@@ -41,7 +41,7 @@
     
     <form onsubmit="event.preventDefault(); changePage();">
       <div class="text-center mb-4 font-color mt-4">
-        <img class="mb-4" src="../../views/styles/images/markus/logoMarkusGray.png" alt="" >
+        <img class="image-no-overflow" src="../styles/images/markus/logoMarkusGray.png" alt="" >
         <h1 class="h2 mb-3 font-weight-normal ">Client Register</h1>
         <p>Please fill in all fields in the form below. Before submitting, review the information to ensure it is correct.</p>
       </div>
@@ -121,7 +121,7 @@
       <div style="display: flex;">
         <button class="btn btn-lg btn-success btn-block mt-4 mr-2" type="submit">Sign up</button>
         <button class="btn btn-lg btn-outline-success btn-block mt-4 mr-2" onclick="clearFields()">Reset</button>
-        <button class="btn btn-lg btn-outline-danger btn-block mt-4" onclick="goBack()">Voltar</button>
+        <button class="btn btn-lg btn-outline-danger btn-block mt-4" onclick="goBack()">Back</button>
       </div>
       <p class="font-color text-center mt-4"> Already have an account? <a href="logIn.html">Log In</a></p>
       <p class="mt-4 mb-3 text-muted text-center">&copy; 2022-2024 Markus, Inc</p>
