style: resolution hd

--- a/src/views/pages/joinUs.html
+++ b/src/views/pages/joinUs.html
@@ -121,7 +121,7 @@
       <div style="display: flex;">
         <button class="btn btn-lg btn-success btn-block mt-4 mr-2" type="submit">Sign up</button>
         <button class="btn btn-lg btn-outline-success btn-block mt-4 mr-2" onclick="clearFields()">Reset</button>
-        <button class="btn btn-lg btn-outline-danger btn-block mt-4" onclick="goBack()">Back</button>
+        <button class="btn btn-lg btn-outline-danger btn-block mt-4 mr-2" onclick="goBack()">Back</button>
       </div>
       <p class="font-color text-center mt-4"> Already have an account? <a href="logIn.html">Log In</a></p>
       <p class="mt-4 mb-3 text-muted text-center">&copy; 2022-2024 Markus, Inc</p>
